--- a/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
+++ b/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Bucket Hat Pattern Generator"
+title: "버킷햇 재봉패턴 생성 웹앱"
 date: "2025-03-15"
 slug: "bucket-hat"
 ---
@@ -11,7 +11,7 @@ import { Lathe } from "./Lathe";
 
 이 프로젝트는 사이즈, 모양, 시접 등의 수치를 입력하여 버킷햇의 재봉 패턴을 생성할 수 있는 도구입니다. 인터랙션과 완성품에 대한 이해를 돕기 위해, 생성된 패턴을 기반으로 3D 미리보기와 물리 시뮬레이션 기능도 제공합니다.
 
-이 프로젝트는 원단을 자르고 바느질하기 전에 완성품에 대해 더 직관적인 이해를 제공하는 것을 목표로 하고있습니다. 취미로 재봉을 할 때 가장 어려운 점 중 하나는 완성 전에 완성품이 어떤 모양을 하고 있을 지 가늠하기 어렵다는 것입니다. 재봉 패턴에서 제공하는 일러스트나 이미지가 이해를 도울 수 있는 자료의 전부이며, 패턴의 치수와 각도를 조금만 변경해도 최종 형태에 큰 변화를 미치기 때문에 어려울 수 밖에 없습니다.
+이 프로젝트는 원단을 자르고 바느질하기 전에 완성품에 대한 더 직관적인 이해를 제공하는 것을 목표로 하고있습니다. 취미로 재봉을 할 때 가장 어려운 점 중 하나는 완성 전에 완성품이 어떤 모양을 하고 있을 지 가늠하기 어렵다는 것입니다. 재봉 패턴에서 제공하는 일러스트나 이미지가 이해를 도울 수 있는 자료의 전부이며, 패턴의 치수와 각도를 조금만 변경해도 최종 형태에 큰 변화를 미치기 때문에 어려울 수 밖에 없습니다.
 
 저는 선물용과 직접 사용할 목적으로 버킷햇을 만든 경우가 종종 있기 때문에 이 경험을 토대로 해당 도구를 만들기로 결정했습니다. 버킷햇은 다양한 모양을 가지고 있어 패턴만을 보고는 최종 형태가 어떻게 보일지 알기 어렵습니다. 예를 들어, 챙을 이루는 패턴의 호(arc) 곡률은 모자 챙이 얼마나 넓게 펼쳐질지를 결정합니다. 이 곡률이 만드는 각도는 실제로 자르고 재봉을 해보지 않으면 모양을 알기 어렵습니다. 특히, 모자와 같은 입체적인 의류는 이러한 어려움을 많이 겪기 때문에, 이 과정을 더 쉽게 만드는 도구를 만들고자 했습니다.
 
@@ -21,11 +21,11 @@ import { Lathe } from "./Lathe";
 
 ## 타겟 사용자
 
-원하는 모양의 패턴을 찾거나 직접 만드는 데 어려움을 겪는 입문 취미가들을 이 도구의 주요 대상 사용자로 삼았습니다 . 저는 기본 버킷햇의 가능한 모든 사이즈와 모양을 생성할 수 있는 종합적인 도구를 만들고자 했습니다. 또한 절차적 생성(Procedural Generation) 도구로서, 중급 혹은 고급 재봉사에게도 실험적으로 사용할 수 있는 가능성을 열어줍니다. 이 도구는 원하는 모양의 정확한 패턴을 계산하고 다양한 원단 무게와 뻣뻣함 정도를 시뮬레이션할 수 있어, 사용자들은 실제 원단을 사용하지 않고도 가상의 실험할 수 있도록 해줍니다.
+원하는 모양의 패턴을 찾거나 직접 만드는 데 어려움을 겪는 입문 취미가들을 이 도구의 주요 대상 사용자로 삼았습니다 . 저는 기본 버킷햇의 가능한 모든 사이즈와 모양을 생성할 수 있는 종합적인 도구를 만들고자 했습니다. 또한, 절차적 생성(Procedural Generation) 도구로서, 중급 혹은 고급 재봉사에게도 실험적으로 사용할 수 있는 가능성을 열어줍니다. 이 도구는 원하는 모양의 정확한 패턴을 계산하고 다양한 원단의 무게와 뻣뻣함 정도를 시뮬레이션할 수 있어, 사용자들은 실제 원단을 사용하지 않고 가상의 실험할 수 있도록 해줍니다.
 
 ## 기능 및 특징
 
-이 프로젝트는 수치 입력을 위한 구성 패널, 모자의 3차원 모델과 원단 시뮬레이션이, 그리고 재봉 패턴의 미리보기를 제공합니다. 사용자는 머리 둘레, 머리 높이, 챙 너비, 챙 각도, 시접과 같은 측정값을 입력할 수 있습니다. 재봉 패턴과 3D 모델은 이러한 입력값들로부터 계산되어 생성되며, 실시간으로 업데이트됨과 동시에 상호작용할 수 있도록 합니다. 3D 모델은 물리 엔진에 적용되어 원단 뻣뻣함, 무게, 중력과 같은 물리적 매개변수를 변경할 수 있는 기능과 함께 모자가 머리에 어떻게 앉는지 시뮬레이션할 수 있습니다. 최종적으로, 재봉 패턴은 원하는 용지 크기로 PDF로 내보낼 수 있습니다.
+이 프로젝트는 수치 입력을 위한 구성 패널, 모자의 3차원 모델과 원단 시뮬레이션, 그리고 재봉 패턴의 미리보기를 제공합니다. 사용자는 머리 둘레, 머리 높이, 챙 너비, 챙 각도, 시접과 같은 측정값을 입력할 수 있습니다. 재봉 패턴과 3D 모델은 이러한 입력값들로부터 계산되며, 실시간으로 업데이트됨과 동시에 상호작용할 수 있도록 합니다. 3D 모델은 물리 엔진에 적용되어 원단의 뻣뻣함, 무게, 중력과 같은 물리적 매개변수를 변경할 수 있는 기능과 함께 모자가 머리에 어떻게 앉는지 시뮬레이션할 수 있습니다. 최종적으로, 재봉 패턴은 원하는 용지 크기의 PDF로 내보낼 수 있습니다.
 
 ### 사용된 기술
 
@@ -42,7 +42,7 @@ import { Lathe } from "./Lathe";
 
 ## 디자인 및 사용자 경험
 
-저는 클래식한 재봉 서적, 라인 드로잉, 미드센츄리모던 전자 제품의 아날로그 다이얼과 슬라이더, 특히 디터 람스(Dieter Rams)의 디자인에서 UI의 디자인에 대한 영감을 받았습니다. 상호작용하는 UI 요소들은 테두리와 그림자를 통해 상호작용성을 나타냅니다. 로고는 EB Garamond를 사용했고, 제목과 단락은 **Inter**를 사용했습니다.
+저는 클래식한 재봉 서적, 라인 드로잉, 미드센츄리모던 전자 제품의 아날로그 다이얼과 슬라이더, 특히 디터 람스(Dieter Rams)의 디자인에서 UI의 디자인에 대한 영감을 받았습니다. 상호작용하는 UI 요소들은 테두리와 그림자를 통해 상호작용성을 나타냅니다. 로고는 <span style={{fontFamily: "EB Garamond", fontWeight: "600"}}>EB Garamond</span>를 사용했고, 제목과 단락은 <span style={{fontFamily: "Inter", fontWeight: "600"}}>Inter</span>를 사용했습니다.
 
 ![Braun TS 45 Controller](https://assets.fontsinuse.com/use-media/20678/upto-700xauto/56703525/1/jpeg/121217RA_braun_hi_fi_amp_006.jpeg)
 
@@ -51,7 +51,6 @@ import { Lathe } from "./Lathe";
     min={500}
     max={650}
     defaultValue={550}
-    label={"Lautstarke"}
     marks={[
       { value: 500, label: "500" },
       { value: 525, label: "525" },
@@ -65,17 +64,17 @@ import { Lathe } from "./Lathe";
   />
 </div>
 
-데스크톱 버전의 레이아웃은 일반적인 구성 성격의 UI를 가지고 있습니다(큰 뷰와 한쪽에 패널이 있는 레이아웃). 반응형 레이아웃을 디자인하는 과제 중 하나는 모바일을 위한 유저 친화적인 구성 레이아웃을 만드는 것이었습니다. 모바일 화면은 패널과 뷰 섹션등으로 화면을 분할하기에 전체 면적이 작다고 판단했습니다. 매개변수를 위한 상호작용 영역이 뷰 섹션으로 인해 가려지면서 사용성이 떨어질 수 있습니다. 그래서 저는 페이지를 아래로 스크롤할 때 3D 뷰포트가 플로팅 창(Floating Viewport)으로 변하도록 디자인했습니다. 플로팅 뷰포트가 여전히 상호작용 영역의 상당한 면적을 차지하지만, 사용자는 가려지지 않은 영역에서 제공되는 시각 정보를 통해 뒤에 어떤 요소들이 있는지를 유추할 수 있습니다.
+데스크톱 버전의 레이아웃은 일반적인 구성 UI 레이아웃을 가지고 있습니다(큰 뷰와 한쪽에 패널이 있는 레이아웃). 반응형 레이아웃을 디자인하는 과제 중 하나는 모바일을 위한 유저 친화적인 구성 레이아웃을 만드는 것이었습니다. 모바일 화면은 패널과 뷰 섹션등으로 화면을 분할하기에 전체 면적이 작다고 판단했습니다. 매개변수를 위한 상호작용 영역이 뷰 섹션으로 인해 가려지면서 사용성이 떨어질 수 있습니다. 그래서 저는 페이지를 아래로 스크롤할 때 3D 뷰포트가 플로팅 창(Floating Viewport)으로 변하도록 디자인했습니다. 플로팅 뷰포트가 여전히 상호작용 영역의 상당한 면적을 차지하지만, 사용자는 가려지지 않은 영역에서 제공되는 시각 정보를 통해 뒤에 어떤 요소들이 있는지를 유추할 수 있습니다.
 
 ![Mobile UI](/bucket-hat/images/bucket-hat-mobile.jpg)
 
 ## 개발 과정 개요
 
-개발은 핵심 기능을 먼저 구축하는 것으로 시작했습니다—몇 가지 입력 매개변수(머리 직경, 높이, 챙 너비, 각도)를 받아 재봉 패턴을 생성하는 데 필요한 변수들을 계산하는 것. 이렇게 계산된 변수로 D3.js의 SVG 생성 함수를 사용하여 패턴을 그렸고, 패턴을 수정하는 함수(모양을 오프셋하고 중앙에 배치하는 등)를 추가적으로 개발했습니다. PDF 생성을 위해 jsPDF와 svg2pdf 플러그인을 사용하여 SVG를 문서에 삽입했습니다. 그 후, 이 프로젝트를 특별하게 만드는 3D 기능과 물리 엔진 개발로 이어갔습니다.
+개발은 핵심 기능을 먼저 구축하는 것으로 시작했습니다—몇 가지 입력 매개변수(머리 둘레레, 높이, 챙 너비, 각도)를 받아 재봉 패턴을 생성하는 데 필요한 변수들을 계산하는 것. 이렇게 계산된 변수로 D3.js의 SVG 생성 기능을 이용해해 패턴을 그렸고, 패턴을 수정하는 함수(모양을 오프셋하고 중앙에 배치하는 등)를 추가적으로 개발했습니다. PDF 생성을 위해 jsPDF와 svg2pdf 플러그인을 사용하여 SVG를 문서에 삽입했습니다. 그 후, 이 프로젝트를 특별하게 만드는 3D 기능과 물리 엔진 개발로 이어갔습니다.
 
 ## 모자 치수 계산하기
 
-버킷햇은 두 개의 잘린 원뿔(Truncated Cones)로 구성됩니다. 하나는 머리(밴드)의 원뿔이고 다른 하나는 챙의 원뿔입니다. 머리 부분에는 크라운이라는 상단 캡이 있습니다. 모자의 모양에 대한 더 자세한 제어를 위해, 위에서 본 머리의 타원의 이심률을 조정하는 머리 비율 매개변수도 추가했습니다. 3D 모델과 재봉 패턴을 생성하는 데 필요한 다양한 변수들이 이러한 매개변수 입력값으로 계산되었습니다.
+버킷햇은 두 개의 잘린 원뿔(Truncated Cones)로 구성됩니다. 하나는 머리(밴드)의 원뿔이고 다른 하나는 챙의 원뿔입니다. 머리 부분에는 크라운이라는 상단 캡이 있습니다. 모자의 모양에 대한 더 자세한 제어를 위해, 위에서 본 머리의 타원의 이심율을 조정하는 머리 비율 매개변수도 추가했습니다. 3D 모델과 재봉 패턴을 생성하는 데 필요한 다양한 변수들이 이러한 매개변수 입력값으로 계산되었습니다.
 
 ### 입력 치수와 계산된 변수
 
@@ -93,7 +92,7 @@ import { Lathe } from "./Lathe";
 - 챙 원뿔 밑면 오프셋(Brim Base Offset)
 - 크라운 반지름 A, B(Crown Radius A, B)
 
-둘레와 이심율이 주어진 타원의 장축(a)과 단축(b)을 계산하기 위해, 타원의 둘레를 계산하는 공식이 필요했습니다. 처음에는 간단하게 2πr의 변형된 형태일 것이라고 생각했지만, 온라인에서 검색해보니 정확한 공식이 없다는 것을 알게 되었습니다! 검색하면서 [위키 페이지](https://en.wikipedia.org/wiki/Perimeter_of_an_ellipse) 와 [재미있는 유튜브 영상](https://www.youtube.com/watch?v=5nW3nJhBHL0) 을 발견했는데, 타원은 정립된 하나의 공식이 없다는 것과 그 이유에 대한 내용이 포함되어있습니다. 가장 정확한 근사치 중 하나는 천재 수학자인 [스리니바사 라마누잔](https://en.wikipedia.org/wiki/Srinivasa_Ramanujan)에 의해 만들어졌는데, 그 공식은 다음과 같습니다.
+둘레와 이심율이 주어진 타원의 장축(a)과 단축(b)을 계산하기 위해, 타원의 둘레를 계산하는 공식이 필요했습니다. 처음에는 간단하게 `2πr`의 변형된 형태일 것이라고 생각했지만, 온라인에서 검색해보니 정확한 공식이 없다는 것을 알게 되었습니다! 검색하면서 [위키 페이지](https://en.wikipedia.org/wiki/Perimeter_of_an_ellipse) 와 [재미있는 유튜브 영상](https://www.youtube.com/watch?v=5nW3nJhBHL0) 을 발견했는데, 타원은 정립된 하나의 공식이 없다는 것과 그 이유에 대한 내용이 포함되어있습니다. 가장 정확한 근사치 중 하나는 천재 수학자인 [스리니바사 라마누잔](https://en.wikipedia.org/wiki/Srinivasa_Ramanujan)에 의해 만들어졌는데, 그 공식은 다음과 같습니다.
 
 <Katex
   equation={
@@ -111,7 +110,7 @@ function ellipseCircumference(a, b) {
 }
 ```
 
-이 근사치는 0.000005%의 오차를 가집니다(이런걸 흑마법이라 생각함). 하지만 이 공식은 제곱근이 중첩되는 등 복잡하기 때문에, 저는 쉽게 역으로 풀어 장축과 단축을 구할 수 없었습니다. 따라서 저는 간단한 반복 접근 알고리즘으로 목표 허용 오차로 라마누잔의 근사치와 비교하여 두 반지름을 구할 수 있었습니다.
+이 근사치는 0.000005%의 오차를 가집니다(이런 걸 흑마법이라 생각함). 하지만, 이 공식은 제곱근이 중첩되는 등 복잡하기 때문에, 쉽게 역으로 풀어 장축과 단축을 구할 수 없었습니다. 따라서, 저는 간단한 반복 접근 알고리즘으로 목표 허용 오차로 라마누잔의 근사치와 비교하여 두 반지름을 구할 수 있었습니다.
 
 ```js
 function findEllipseAxesForRatio(target, ratio, initialA = 75, tolerance = 1e-4) {
@@ -140,13 +139,13 @@ function findEllipseAxesForRatio(target, ratio, initialA = 75, tolerance = 1e-4)
 }
 ```
 
-그러나, 또 다른 수학 문제에 부딛혔습니다... 타원형 원뿔의 전개도를 그리기 위해서는, 전개도의 호(피자 조각 모양)의 각도가 필요했습니다. 원형 원뿔의 경우, 호의 각도는 `Φ=2πr/l` 이지만, 타원형 원뿔의 경우, 모선 `l` 은 호의 모든 각도에 따라 변합니다. 저는 고민 끝에 멋진 근사치 공식이 떠오르지 않아, 간단하게 장축과 단축으로 계산된 두 각도의 평균을 이용했습니다. 그 결과, 이심률이 높을때는 수치의 오차가 크지만, 버킷햇에 적용했을 때는 5~10mm 사이의 오차가 있습니다. 원단의 신축성과 재봉의 유연성이 이 정도로 큰 문제가 있을 것 같진 않을거라 판단하여 평균값을 사용하는 것으로 진행했습니다.
+그러나, 또 다른 수학 문제에 부딛혔습니다... 원뿔의 전개도를 그리기 위해서는, 전개도의 호(피자 조각 모양)의 각도`Φ`가 필요했습니다. 원형 원뿔의 경우, 호의 각도는 `Φ=2πr/l` 이지만, 타원형 원뿔의 경우, 모선 `l` 은 호의 모든 각도에 따라 변합니다. 저는 멋진 근사치 공식이 떠오르지 않아, 고민 끝에 간단하게 장축과 단축으로 계산된 두 각도의 평균을 이용했습니다. 그 결과, 이심율이 높을때는 수치의 오차가 크지만, 버킷햇에 적용했을 때는 5mm~10mm 사이의 오차가 있습니다. 원단의 신축성과 재봉의 유연성 덕분에 이 정도의 오차는 큰 문제가 발생할 것 같진 않을거라 판단하여 평균값을 사용하는 것으로 진행했습니다.
 
 <img className="illustration" src="/bucket-hat/images/cone-development.png" />
 
 ## 전개도 그리기
 
-방사형 모양을 그리는 방법 고정된 중심에서, 각도를 이용해 위치를 결정하여 점을 잇는 방식으로 이루어집니다.
+방사형 모양을 그리는 방법은, 고정된 중심에서 각도를 이용한 위치를 결정하여 점을 잇는 방식으로 이루어집니다.
 
 ```js
 function ellipse(a, b, segments = 128) {
@@ -168,7 +167,7 @@ function ellipse(a, b, segments = 128) {
 }
 ```
 
-타원형 원뿔 전개도의 경우, 모선 `l` 의 길이는 모든 각도에서 변하므로, 각도를 `2π/segments` 단계로 순차적으로 모선의 길이를 계산했습니다(segments는 호가 몇번 나뉘어졌는지를 나타냅니다). 그런 다음, 위의 알고리즘과 같이 방사형 도형을 그리지만, 장축과 단축 `a, b` 대신 중심에서의 거리로 사용될 모선의 길이를 사용합니다.
+타원형 원뿔 전개도의 경우, 모선 `l` 의 길이는 모든 각도에서 변하므로, 각도를 `2π/segments` 단계로 순차적으로 모선의 길이를 계산했습니다(`segments`는 호가 몇번 나뉘어졌는지를 나타냅니다). 그런 다음, 위의 알고리즘과 같이 방사형 도형을 그리지만, 장축과 단축 `a, b` 대신 중심에서의 거리로 사용될 모선의 길이`l`를 사용합니다.
 
 ```js
 function ellipticalConeDevelopmentArc(
@@ -214,29 +213,29 @@ jsPDF는 동적 PDF 파일을 생성하는 데 유용한 도구였습니다. 텍
 
 ## 메시 만들기
 
-3D 모델은 THREE.js의 `LatheGeometry`를 사용하여 생성했습니다. 모자의 프로필을 형태를 라인 데이터로 가져와 축을 중심으로 회전시키고, 한 방향으로 스케일을 조정하여 머리 비율과 일치하도록 하여 타원형 모양이 되게 합니다.
+3D 모델은 THREE.js의 `LatheGeometry`를 사용하여 생성했습니다. 모자의 프로필을 형태를 라인 데이터로 가져와 축을 중심으로 회전시키고, 한 방향으로의 스케일을 조정하여 머리 이심율과 일치하도록 하여 타원형 모양이 되게 합니다.
 
 <Lathe />
 
 ## 물리 시뮬레이션
 
-물리 시뮬레이션은 모자의 물리적 특성을 이해하는 데 도움을 줍니다. 시뮬레이션이 부정확할 수 있지만, 모자가 머리 위에 놓여있을 때의 모양과 특징에 대한 더 나은 이해를 제공합니다.
+물리 시뮬레이션은 모자의 물리적 특성을 이해하는 데 도움을 줍니다. 시뮬레이션이 부정확할 수 있지만, 모자가 머리 위에 놓여있을 때의 모양과 특징에 대한 직관적인 이해를 제공합니다.
 
-시뮬레이션을 하기 위해선 두 개의 세계가 필요합니다: **물리 세계**와 **그래픽 세계**. 그래픽 세계는 3D 모델 생성, 조명 설정, 카메라, 셰이더, 등 시각적인 것을 담당하며 Three.js로 구동인 됩니다. 물리 세계는 별도의 세계이며, 3D 모델 데이터의 복사본을 가져와 중력, 질량, 그리고 다른 물리적 규칙으로 자신만의 계산과 시뮬레이션이 진행됩니다.
+시뮬레이션을 하기 위해선 두 개의 세계가 필요합니다 -**물리 세계**와 **그래픽 세계**. 그래픽 세계는 3D 모델 생성, 조명, 카메라, 셰이더, 등 시각적인 것을 담당하며 Three.js로 구동이 됩니다. 물리 세계는 별도의 세계이며, 3D 모델 데이터의 복사본을 가져와 중력, 질량, 그리고 다른 물리적 규칙으로 자신만의 계산과 시뮬레이션이 진행됩니다.
 
-제가 세팅한 이 시뮬레이션에서 원단은 3D 모델의 메시 정점(Vertex)들의 위치값을 복사한 입자(Particles)들로 구성되어 있으며 서로 컨스트레인츠(제약, Constraints)로 연결됩니다. 이러한 컨스트레인츠는 천이 얼마나 늘어나거나 구부러질 수 있는지를 제어하며 3D 모델이 현실적으로 느껴지게 합니다.
+제가 세팅한 시뮬레이션의 원단은 3D 모델의 메시 정점(Vertex)들의 위치값을 복사한 입자(Particles)들로 구성되어 있으며 서로 컨스트레인츠(제약, Constraints)로 연결됩니다. 이러한 컨스트레인츠는 천이 얼마나 늘어나거나 구부러질 수 있는지를 제어하며 3D 모델이 현실적으로 느껴지게 합니다.
 
-물리 엔진 Cannon에서는 여러 가지의 컨스트레인트를 제공하며, 다음은 천을 시뮬레이션하는 것과 관련된 컨스트레인츠입니다:
+물리 엔진 Cannon에서는 여러 가지의 컨스트레인츠를 제공하며, 다음은 천을 시뮬레이션하는 것과 관련된 컨스트레인츠입니다:
 
 - **거리 컨스트레인트(Distance Constraint)** - 두 점이 서로 고정된 거리를 유지하도록 하는 제약입니다. 천의 비율이 유지되면서도 재료가 구부러지고 흩날릴 수 있도록 합니다.
 - **잠금 컨스트레인트(Lock Constraint)** - 모든 움직임의 자유도를 억제하는 제약입니다. 거리 컨스트레인트가 천의 비율을 유지한다면, 잠금 컨스트레인트는 원래 모양을 유지하기 위한 힘을 가함으로써 천의 형태를 유지합니다.
-- **스프링(Spring)** - 스프링은 자유롭게 이동할 수 있음과 동시에 원래 모양을 유지하기 위한 힘도 적용하여 거리와 잠금 컨스트레인트의 특성을 모두 가집니다. 스프링은 천의 신축성을 시뮬레이션할 수 있어 더 현실적이지만, 더 많은 계산이 필요하기 때문에 더 많은 성능을 요구를 합니다.
+- **스프링(Spring)** - 스프링은 자유롭게 이동할 수 있음과 동시에 원래 모양을 유지하기 위한 힘도 적용하여 거리와 잠금 컨스트레인트의 특성을 모두 가집니다. 스프링은 천의 신축성을 시뮬레이션할 수 있어 더 현실적이지만, 더 많은 계산이 필요하기 때문에 많은 컴퓨팅 성능을 요구를 합니다.
 
 이 프로젝트에서는 첫 두 가지의 컨스트레인츠를 사용했습니다.
 
 ### 메시 데이터를 물리 세계로 복사하기
 
-시뮬레이션하기 위해, 먼저 메쉬의 정점 위치들을 물리 세계로 복사합니다 -Three.js 메쉬에서 정점 데이터를 복사하고 Cannon에서 입자를 생성합니다. 아래는 Three.js에서 평면 지오메트리를 생성하고, 지오메트리의 정점 정보를 복사하여 Cannon 입자를 생성하는 간단한 방법입니다:
+시뮬레이션하기 위해, 먼저 메시의 정점 위치들을 물리 세계로 복사합니다 -Three.js 메시에서 정점 데이터를 복사하고 Cannon에서 입자를 생성합니다. 아래는 Three.js에서 평면 지오메트리를 생성하고, 지오메트리의 정점 정보를 복사하여 Cannon 입자를 생성하는 간단한 방법입니다:
 
 ```js
 // Making a plane geometry and cannon.js particles with the vertex data
@@ -264,7 +263,7 @@ for (let i = 0; i < vertexPositions.count; i++) {
 }
 ```
 
-이 알고리즘은 간단하게 메쉬의 정점 위치를 기반으로 물리 입자를 생성하는 방법이지만, 인접한 입자 사이에 제약 조건을 추가할 수 있는 데이터가 구조화된 방법이 필요해보였습니다.
+이 알고리즘은 간단하게 메시의 정점 위치를 기반으로 물리 입자를 생성하는 방법이지만, 편리하게 인접한 입자 사이에 제약 조건을 추가할 수 있도록 데이터의 구조화 방법이 필요해보였습니다.
 
 ### 인덱스된 데이터 구조로 가독성 향상하기
 
@@ -313,14 +312,14 @@ particles = {
 }
 ```
 
-이렇게 x y 좌표를 이용해 입자를 참조할 수 있습니다.
+이렇게 하면 `x y` 좌표를 이용해 쉽게 입자를 참조할 수 있습니다.
 
 ### **제약 조건으로 입자 연결하기**
 
 버킷햇의 구조를 따라하기 위해 입자들을 다음과 같은 조건으로 컨스트레인츠를 연결했습니다.
 
 - 입자가 가장 윗쪽 행이 아닐 때, 각 입자를 위에 있는 입자에 연결합니다(수직 연결).
-- 입자가 가장 왼쪽 열이 아닐 떼, 각 입자를 왼쪽에 있는 입자에 연결합니다(수평 연결).
+- 입자가 가장 왼쪽 열이 아닐 때, 각 입자를 왼쪽에 있는 입자에 연결합니다(수평 연결).
 - 입자가 가장 왼쪽 열에 있는 경우, 이음새가 없도록 감싸기를 위해 가장 오른쪽 열의 입자에 연결합니다(머리와 챙과 같은 원통형 모양).
 
 ```js
